--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                 <p>Created a simple web utility focused on managing the loading of website content.</p>
                 <a href=" https://usama670.github.io/Loader-for-website/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
+             <div class="project-card">
+                <h3>Fitness Tracker Web App</h3>
+                <p> Log workouts and track progress over time.</p>
+                <a href="https://usama670.github.io/Fitness-tracking-app/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
         </div>
     </div>
 </section>
@@ -138,4 +143,5 @@
 
 <script src="scripts.js"></script>
 </body>
+
 </html>
