Add Recipe Finder App to projects section
Added a new project 'Recipe Finder App' to the projects section.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                 <p> Log workouts and track progress over time.</p>
                 <a href="https://usama670.github.io/Fitness-tracking-app/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
+            <div class="project-card">
+                <h3>Recipe Finder App</h3>
+                <p>A simple app that lets users search for meals.</p>
+                <a href="https://usama670.github.io/Recipe-Finder/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
         </div>
     </div>
 </section>
@@ -145,3 +150,4 @@
 </body>
 
 </html>
+
