Fix HTML formatting and update project details

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 <p>A simple app that lets users search for meals.</p>
                 <a href="https://usama670.github.io/Recipe-Finder/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
+            <div class="project-card">
+                <h3>Online Notes Manager</h3>
+                <p>My design follows a Model-View-Controller (MVC) pattern using Flask. The View is HTML/JS handling LocalStorage for guests. The Controller is Python handling logic and Syncing. The Model is SQLite storing user data. This ensures the system is lightweight and keeps data safe even if the user forgets to login initially.</p>
+                <a href="https://github.com/Usama670/Online-Notes-Manager" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
         </div>
     </div>
 </section>
@@ -150,5 +155,6 @@
 </body>
 
 </html>
+
 
 
