Restore index.html to original state
Restored the index.html file with the original content.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="project-card">
                 <h3>Online Notes Manager</h3>
-                <p>My design follows a Model-View-Controller (MVC) pattern using Flask. The View is HTML/JS handling LocalStorage for guests. The Controller is Python handling logic and Syncing. The Model is SQLite storing user data. This ensures the system is lightweight and keeps data safe even if the user forgets to login initially.</p>
+                <p>A web app that manages notes using Local Storage for guests and SQLite for users, featuring auto-save and automatic syncing on login.</p>
                 <a href="https://github.com/Usama670/Online-Notes-Manager" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -155,6 +155,7 @@
 </body>
 
 </html>
+
 
 
 
