Fix HTML formatting issues and clean up code

--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
                 <a href="https://github.com/Usama670/Online-Notes-Manager" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
+         </div>
+            <div class="project-card">
+                <h3>Interactive Pricing Component</h3>
+                <p>Built a dynamic pricing card component with a toggle feature to switch between monthly and annual billing views.</p>
+                <a href="https://github.com/Usama670/Online-Notes-Manager" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -155,6 +162,7 @@
 </body>
 
 </html>
+
 
 
 
