Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="project-card">
                 <h3>Interactive Pricing Component</h3>
                 <p>Built a dynamic pricing card component with a toggle feature to switch between monthly and annual billing views.</p>
-                <a href="https://github.com/Usama670/Online-Notes-Manager" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+                <a href="https://usama670.github.io/Interactive-Pricing-Component/" target="_blank" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
@@ -162,6 +162,7 @@
 </body>
 
 </html>
+
 
 
 
